--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -30,12 +30,13 @@
             <div id="myModal" class="modal container-fluid justify-content-center">
 
                 <!-- Modal content -->
-                <div class="modal-content">
+                <div class="modal-content d-flex ">
                     <span class="close">&times;</span>
                     <form action="" method="post" class="d-flex justify-content-center">
                         <textarea name="thoughts" id="" cols="30" rows="10" class="mr-3"></textarea>
-                        <button class="btn btn-text-light">submit</button>
+                        <button class="btn text-light ">submit</button>
                     </form>
+
                 </div>
 
             </div>
