--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -11,6 +11,30 @@
 </head>
 
 <body style="background-color: rgb(2, 8, 37);padding-bottom: 20px;box-sizing: border-box;">
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: rgb(2, 8, 37)">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="/static/icons/noun-flash-cards-4767.png" alt="logo" style="width:40px;height:40px;"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('user_panel')}}">diary</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </div>
 
     <div class="container-fluid row justify-content-center container-fluid-sm mr-0 ml-0">
 
@@ -24,7 +48,7 @@
                     <button id="replace_1" onclick="replaceCard_1()" disabled="true" class="btn btn-outline-dark rep">replace</button>
                 </div>
             </div>
-            <button id="myBtn" class="btn btn-outline-dark">write your thoughts</button>
+            <button id="myBtn" class="btn btn-outline-dark" disabled>write your thoughts</button>
 
             <!-- The Modal -->
             <div id="myModal" class="modal container-fluid justify-content-center">
@@ -32,9 +56,9 @@
                 <!-- Modal content -->
                 <div class="modal-content d-flex ">
                     <span class="close">&times;</span>
-                    <form action="" method="post" class="d-flex justify-content-center">
-                        <textarea name="thoughts" id="" cols="30" rows="10" class="mr-3"></textarea>
-                        <button class="btn text-light ">submit</button>
+                    <form id="card_form_1" action="" method="POST" class="d-flex justify-content-center">
+                        <textarea name="thoughts" id="diary_text_1" cols="30" rows="10" class="mr-3"></textarea>
+                        <button id="submit_1" class="btn text-light ">submit</button>
                     </form>
 
                 </div>
@@ -74,9 +98,13 @@
 
     </div>
     <script>
+
+        // --------------------- diary from appear ----------------------------
+
         var modal = document.getElementById("myModal");
         var btn = document.getElementById("myBtn");
         var span = document.getElementsByClassName("close")[0];
+
         btn.onclick = function() {
             modal.style.display = "block";
         }
@@ -86,10 +114,32 @@
         span.onclick = function() {
             modal.style.display = "none";
         }
+        // ------------------ AJAX POST request handling ----------------------------
+        let xhr = new XMLHttpRequest();
+        document.getElementById("submit_1").addEventListener("click", function(event){
+            event.preventDefault()
+            var modal = document.getElementById("myModal");
+            modal.style.display = "none";
+
+            // AJAX request to server handler
+            let xhr = new XMLHttpRequest();
+            xhr.open("POST", "{{ url_for('user_interface') }}", true)
+            xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+            toSend = JSON.stringify({
+                text:document.getElementById("diary_text_1").value,
+                card:document.getElementById("card-num-1").getAttribute('src')
+                })
+            console.log(toSend)
+            xhr.send(toSend);
+            console.log('i was clicked')
+        });
+        let div = document.getElementById('myModal');
+
+        // ------------------------------ button handing ---------------------------
         let indicator = 0;
 
         function card_reveal_1() {;
-
+            document.getElementById('myBtn').removeAttribute('disabled')
             document.getElementById("card-num-1").setAttribute("src", `/{{ cards[0]["CARD_PATH"] }}`);
             let toDisable = document.createAttribute("disabled");
             toDisable.value = "true";
