--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,16 @@
+.flash_messages {
+    color: red;
+    font-size: large;
+}
+
+.register-form {
+    display: block;
+    z-index: 1;
+}
+
+/* popup handler for diary form */
+
+
 .modal {
     display: none;
     /* Hidden by default */
@@ -48,6 +61,7 @@
     cursor: pointer;
 }
 
+/*  fade animation for the cards */
 .fade-in-onload {
     animation: fadeIn 3s;
     -webkit-animation: fadeIn 3s;
@@ -153,3 +167,4 @@
         opacity: 1;
     }
 }
+
