--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="static/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    
     <title>Document</title>
 </head>
 
@@ -17,7 +19,13 @@
             <img src="/static/NAD_Logo.svg.png" class="card-img-top d-flex mt-2" alt="company logo">
             <div class="card-body">
                 <h5 class="card-title d-flex justify-content-center">user login</h5>
-
+                {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                                {% for message in messages %}
+                                <p class="flash_messages">{{ message }}</p>
+                                {% endfor %}
+                            {% endif %}
+                        {% endwith %}
                 <form action="{{url_for('login')}}" method="POST">
                     <div class="form-group">
                         <label for="Email">Email address</label>
@@ -31,19 +39,44 @@
                     <div class="form-group form-check">
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                        <a href="" class="register" onclick="registerBlock()">register</a>
+                    </div>
+                    <div>
+                        
                     </div>
                     <div class="d-flex justify-content-center p-2">
                         <input type="submit" class="btn btn-white btn-outline-dark" value="login">
                     </div>
                 </form>
             </div>
-        </div>
+        </div>    
+    </div>
+    <div class="register-form">
+        <form action="{{ url_for('login') }}" method="POST">
+            <div>
+                <label for="fname">First name</label><br>
+                <input type="text" name="fname" id="fname">
+            </div>
+            <div>
+            <label for="lname">Last name</label><br>
+            <input type="text" name="lname" id="lname">
+            </div>
+            <div>
+                <label for="email" name="email">Email</label><br>
+                <input type="text" name="email" id="email">
 
+            </div>
+        </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+    <script>
+        // document.getElementById("register").addEventListener('click',function(event {
+            
+        // }))
+    </script>
 </body>
 
 </html>
