--- a/templates/login.html
+++ b/templates/login.html
@@ -13,13 +13,21 @@
 <body>
 
     <div class="w3-mobile">
-        <div class="" id="login-form">
+        <div class="w3-animate-opacity" id="login-form">
             <form class="w3-display-topmiddle login-form" action="{{url_for('login')}}" method="POST">
-                <h1>login</h1>
+                <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo"> login</h1>
                 <div class="w3-margin">
+                                        
+                    {% with messages = get_flashed_messages() %}
+                     {% if messages %}
+                      {% for message in messages %}
+                    <p class="flash_messages">{{ message }}</p>
+                    {% endfor %}
+                     {% endif %}
+                      {% endwith %}
                     <label for="Email">Email address</label>
                     <input type="email" class="w3-input " id="Email" aria-describedby="emailHelp" name="email">
-                    <small id="emailHelp" class="">We'll never share your email with anyone else.</small>
+                    <small id="emailHelp" class="">*We'll never share your email with anyone else.</small>
                 </div>
                 <div class="w3-margin">
                     <label for="exampleInputPassword1">Password</label>
@@ -33,16 +41,31 @@
 
         </div>
         <div>
-            <div class="register-form w3-display-topmiddle" id="form-modal">
+            <div class="register-form w3-display-topmiddle w3-animate-opacity" id="form-modal">
                 <form class="" action="{{url_for('login')}}" method="POST">
+                    <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo">register</h1>
+                    <div class="w3-margin">
+                        <label for="Email"first>name</label>
+                        <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="fname">
+                        
+                    </div>
+                    <div class="w3-margin">
+                        <label for="Email">last name</label>
+                        <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="lname">
+                        
+                    </div>
                     <div class="w3-margin">
                         <label for="Email">Email address</label>
                         <input type="email" class="w3-input" id="Email" aria-describedby="emailHelp" name="email">
-                        <small id="emailHelp" class="">We'll never share your email with anyone else.</small>
+                        <small id="emailHelp" class="">*We'll never share your email with anyone else.</small>
                     </div>
                     <div class="w3-margin">
-                        <label class="" for="exampleInputPassword1">Password</label>
-                        <input type="password" class="w3-input" id="exampleInputPassword1" name="pass">
+                        <label class="" for="">country</label>
+                        <input type="text" class="w3-input" id="exampleInputPassword1" name="pass">
+                    </div>
+                    <div class="w3-margin">
+                        <label class="" for="password">choose Password</label>
+                        <input type="password" class="w3-input" id="password" name="pass">
                     </div>
                     <div class="form-group text-start">
 
@@ -52,8 +75,8 @@
                     </div>
                     <div class="d-flex justify-content-center p-2">
 
-                        <input type="submit" class="" value="login">
-                        <a href="#" class="register " onclick="registerBlock()">register</a>
+                        <input type="submit" class="" value="register">
+                        
                     </div>
                 </form>
 
@@ -66,7 +89,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
-    <script src="/static/js/index.js">
+    <script src="/static/js/login.js">
     </script>
 </body>
 
@@ -74,7 +97,3 @@
 
 </html>
 
-<!-- 
-{% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
-                <p class="flash_messages">{{ message }}</p>
-                {% endfor %} {% endif %} {% endwith %} -->
