git resolved user registration, register form fix, form data get fixed.

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,21 +17,9 @@
             <form class="w3-display-topmiddle login-form" action="{{url_for('login')}}" method="POST">
                 <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo"> login</h1>
                 <div class="w3-margin">
-<<<<<<< HEAD
-
-                    {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
+                    {% with messages=get_flashed_messages() %} {% if messages %} {% for message in messages %}
                     <p class="flash_messages">{{ message }}</p>
                     {% endfor %} {% endif %} {% endwith %}
-=======
-                                        
-                    {% with messages = get_flashed_messages() %}
-                     {% if messages %}
-                      {% for message in messages %}
-                    <p class="flash_messages">{{ message }}</p>
-                    {% endfor %}
-                     {% endif %}
-                      {% endwith %}
->>>>>>> origin/main
                     <label for="Email">Email address</label>
                     <input type="email" class="w3-input " id="Email" aria-describedby="emailHelp" name="email">
                     <small id="emailHelp" class="">*We'll never share your email with anyone else.</small>
@@ -49,30 +37,17 @@
         </div>
         <div>
             <div class="register-form w3-display-topmiddle w3-animate-opacity" id="form-modal">
-<<<<<<< HEAD
-                <form class="" action="{{url_for('reg')}}" method="post">
+                <form class="" action="{{url_for('reg')}}" method="POST">
                     <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo">register</h1>
                     <div class="w3-margin">
                         <label for="Email" first>name</label>
                         <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="fname">
 
-=======
-                <form class="" action="{{url_for('login')}}" method="POST">
-                    <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo">register</h1>
-                    <div class="w3-margin">
-                        <label for="Email"first>name</label>
-                        <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="fname">
-                        
->>>>>>> origin/main
                     </div>
                     <div class="w3-margin">
                         <label for="Email">last name</label>
                         <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="lname">
-<<<<<<< HEAD
 
-=======
-                        
->>>>>>> origin/main
                     </div>
                     <div class="w3-margin">
                         <label for="Email">Email address</label>
@@ -81,30 +56,18 @@
                     </div>
                     <div class="w3-margin">
                         <label class="" for="">country</label>
-<<<<<<< HEAD
                         <input type="text" class="w3-input" id="exampleInputPassword1" name="country">
-=======
-                        <input type="text" class="w3-input" id="exampleInputPassword1" name="pass">
->>>>>>> origin/main
                     </div>
                     <div class="w3-margin">
                         <label class="" for="password">choose Password</label>
                         <input type="password" class="w3-input" id="password" name="pass">
                     </div>
-                    <div class="form-group text-start">
-
-                    </div>
                     <div>
-
+                        <label> varify password</label>
+                        <input type="text" class="w3-input" id="password-varify" name="pass_varify">
                     </div>
-                    <div class="d-flex justify-content-center p-2">
-
-                        <input type="submit" class="" value="register">
-<<<<<<< HEAD
-
-=======
-                        
->>>>>>> origin/main
+                    <div class="w3-margin">
+                        <input type="submit" class="w3-button" value="register">
                     </div>
                 </form>
 
@@ -123,9 +86,7 @@
 
 
 
-<<<<<<< HEAD
-</html>
-=======
 </html>
 
->>>>>>> origin/main
+
+</html>
