--- a/templates/login.html
+++ b/templates/login.html
@@ -63,7 +63,9 @@
                         </div>
                         <div class="w3-margin">
                             <label class="" for="password">choose Password</label>
+
                             <input type="password" class="w3-input" id="password" name="pass">
+                            <small class="small-tag">*Password must contain one special charecter one uppercase,lowercase and one number</small>
                             <small id="pass-tag"></small>
 
                         </div>
