--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -38,7 +38,7 @@
 
     <div class="container-fluid row justify-content-center container-fluid-sm mr-0 ml-0">
 
-        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3" style="width: 18rem;">
+        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-1" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body justify-content-center">
                 <h5 class="card-title">Card title</h5>
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3" style="width: 18rem;">
+        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-2" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -76,7 +76,7 @@
             </div>
         </div>
 
-        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3" style="width: 18rem;">
+        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-3" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -86,7 +86,7 @@
             </div>
         </div>
 
-        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3" style="width: 18rem;">
+        <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-4" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
