--- a/templates/login.html
+++ b/templates/login.html
@@ -42,7 +42,7 @@
                     <div class="w3-half">
                         <div class="w3-margin">
                             <label for="Email" first>name</label>
-                            <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="fname">
+                            <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="fname" required>
 
                         </div>
                         <div class="w3-margin">
@@ -52,7 +52,7 @@
                         </div>
                         <div class="w3-margin">
                             <label for="Email">Email address</label>
-                            <input type="email" class="w3-input" id="Email" aria-describedby="emailHelp" name="email">
+                            <input type="email" class="w3-input" id="Email" aria-describedby="emailHelp" name="email" required>
                             <small id="emailHelp" class="">*We'll never share your email with anyone else.</small>
                         </div>
                     </div>
