--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/styles.css">
-    <title>Document</title>
+    <title>tarot reader</title>
 </head>
 
 <body style="background-color: rgb(2, 8, 37);padding-bottom: 20px;box-sizing: border-box;">
@@ -24,7 +24,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('user_panel')}}">diary</a>
+                            <a class="nav-link" href="{{url_for('user_panel')}}">Diary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Pricing</a>
@@ -44,23 +44,23 @@
                 <h5 class="card-title">Card title</h5>
                 <p id="wow" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <div class="d-flex justify-content-center">
-                    <button id="reveal-1" onclick="card_reveal_1()" class="btn btn-outline-dark mr-3">reveal</button>
-                    <button id="replace_1" onclick="replaceCard_1()" disabled="true" class="btn btn-outline-dark rep">replace</button>
+                    <button id="reveal-1" onclick="card_reveal_1()" class="btn btn-outline-dark mr-3">Reveal</button>
+                    <button id="replace_1" onclick="replaceCard_1()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
                 </div>
             </div>
-            <button id="myBtn" class="btn btn-outline-dark" disabled>write your thoughts</button>
+            <button id="myBtn" class="btn btn-outline-dark" disabled>Write your thoughts</button>
 
             <!-- The Modal -->
             <div id="myModal" class="modal container-fluid justify-content-center">
 
                 <!-- Modal content -->
-                <div class="modal-content d-flex ">
+                <div class="modal-content ">
                     <span class="close">&times;</span>
                     <form id="card_form_1" action="" method="POST" class="d-flex justify-content-center">
                         <textarea name="thoughts" id="diary_text_1" cols="30" rows="10" class="mr-3"></textarea>
-                        <button id="submit_1" class="btn text-light ">submit</button>
-                    </form>
 
+                    </form>
+                    <button id="submit_1" class="btn text-light ">Submit</button>
                 </div>
 
             </div>
@@ -71,8 +71,8 @@
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button id="reveal-2" onclick="card_reveal_2()" class="btn btn-outline-dark ">reveal</button>
-                <button id="replace_2" onclick="replaceCard_2()" disabled="true" class="btn btn-outline-dark rep">replace</button>
+                <button id="reveal-2" onclick="card_reveal_2()" class="btn btn-outline-dark ">Reveal</button>
+                <button id="replace_2" onclick="replaceCard_2()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
             </div>
         </div>
 
@@ -81,8 +81,8 @@
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button id="reveal-3" onclick="card_reveal_3()" class="btn btn-outline-dark ">reveal</button>
-                <button id="replace_3" onclick="replaceCard_3()" disabled="true" class="btn btn-outline-dark rep">replace</button>
+                <button id="reveal-3" onclick="card_reveal_3()" class="btn btn-outline-dark ">Reveal</button>
+                <button id="replace_3" onclick="replaceCard_3()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
             </div>
         </div>
 
@@ -91,8 +91,8 @@
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <button id="reveal-4" onclick="card_reveal_4()" class="btn btn-outline-dark ">reveal</button>
-                <button id="replace_4" onclick="replaceCard_4()" disabled="true" class="btn btn-outline-dark rep">replace</button>
+                <button id="reveal-4" onclick="card_reveal_4()" class="btn btn-outline-dark ">Reveal</button>
+                <button id="replace_4" onclick="replaceCard_4()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
             </div>
         </div>
 
@@ -105,7 +105,7 @@
         var span = document.getElementsByClassName("close")[0];
 
         btn.onclick = function() {
-            modal.style.display = "block";
+            modal.style.display = "flex";
         }
         span.onclick = function() {
             modal.style.display = "none";
