--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <div class="w3-mobile">
         <div class="w3-animate-opacity" id="login-form">
             <form class="w3-display-topmiddle login-form" action="{{url_for('login')}}" method="POST">
-                <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo"> login</h1>
+                <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo"> Login</h1>
                 <div class="w3-margin">
                     {% with messages=get_flashed_messages() %} {% if messages %} {% for message in messages %}
                     <p class="flash_messages">{{ message }}</p>
@@ -29,8 +29,8 @@
                     <input type="password" class="w3-input" id="exampleInputPassword1" name="pass">
                 </div>
                 <div class="">
-                    <input type="submit" class="" value="login">
-                    <a href="#" class="register" onclick="registerBlock()">register</a>
+                    <input type="submit" class="" value="Login">
+                    <a href="#" class="register" onclick="registerBlock()">Register</a>
                 </div>
             </form>
 
@@ -41,12 +41,12 @@
                     <h1><img src="/static/icons/noun-flash-cards-4767.png" alt="logo">register</h1>
                     <div class="w3-half">
                         <div class="w3-margin">
-                            <label for="Email" first>name</label>
+                            <label for="Email" first>Name</label>
                             <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="fname" required>
 
                         </div>
                         <div class="w3-margin">
-                            <label for="Email">last name</label>
+                            <label for="Email">Last name</label>
                             <input type="text" class="w3-input " id="name" aria-describedby="emailHelp" name="lname">
 
                         </div>
@@ -58,11 +58,11 @@
                     </div>
                     <div class="w3-half w3-rest">
                         <div class="w3-margin">
-                            <label class="" for="">country</label>
+                            <label class="" for="">Country</label>
                             <input type="text" class="w3-input" id="exampleInputPassword1" name="country">
                         </div>
                         <div class="w3-margin">
-                            <label class="" for="password">choose Password</label>
+                            <label class="" for="password">Choose Password</label>
 
                             <input type="password" class="w3-input" id="password" name="pass">
                             <small class="small-tag">*Password must contain one special charecter one uppercase,lowercase and one number</small>
@@ -70,7 +70,7 @@
 
                         </div>
                         <div class="w3-margin">
-                            <label> varify password</label>
+                            <label> Varify password</label>
                             <input type="password" class="w3-input" id="password-varify" name="pass_varify" disabled>
                             <small id="pass-var-tag"></small>
                         </div>
