--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -45,10 +45,10 @@
     left: 0;
     right: 0;
     background-color: rgb(2, 8, 37);
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
+    padding: 20px;
     margin: auto;
-    /* padding: 50px; */
     border: 1px solid wheat;
 }
 
