--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -12,20 +12,21 @@
 </head>
 
 <body style="background-color: rgb(2, 8, 37);padding-bottom: 20px;box-sizing: border-box;">
+    <!-- nav try -->
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: rgb(2, 8, 37)">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="/static/icons/noun-flash-cards-4767.png" alt="logo" style="width:40px;height:40px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+              <span class="navbar-toggler-icon"></span>
+            </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('user_panel')}}">Diary</a>
+                            <a class="nav-link" href="{{url_for('user_panel')}}">diary</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Pricing</a>
@@ -36,10 +37,26 @@
             </div>
         </nav>
     </div>
+    <!-- end try -->
+
 
     <div class="container-fluid row justify-content-center container-fluid-sm mr-0 ml-0">
 
+        <!-- The Modal -->
+        <div id="myModal" class="modal container-fluid justify-content-center">
 
+            <!-- Modal content -->
+            <div class="modal-content ">
+                <span class="close">&times;</span>
+                <form id="card_form_1" action="" method="POST" class="d-flex justify-content-center">
+                    <textarea name="thoughts" id="diary_text_1" cols="30" rows="10" class="mr-3"></textarea>
+
+                </form>
+
+                <button id="submit_1" class="btn text-light ">Submit</button>
+            </div>
+
+        </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
             <img id="card-num-1" src="/static/TarotCards/tarot-back/tarot-back.jpg" class="card-img-top fade-in-onload" alt="..." style="width: 180px;height: 300px; margin-left: 18%;">
@@ -51,23 +68,7 @@
                     <button id="replace_1" onclick="replaceCard_1()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
                 </div>
             </div>
-            <button id="myBtn" class="btn btn-outline-dark" disabled>Write your thoughts</button>
-
-            <!-- The Modal -->
-            <div id="myModal" class="modal container-fluid justify-content-center">
-
-                <!-- Modal content -->
-                <div class="modal-content ">
-                    <span class="close">&times;</span>
-                    <form id="card_form_1" action="" method="POST" class="d-flex justify-content-center">
-                        <textarea name="thoughts" id="diary_text_1" cols="30" rows="10" class="mr-3"></textarea>
-
-                    </form>
-
-                    <button id="submit_1" class="btn text-light ">Submit</button>
-                </div>
-
-            </div>
+            <button id="myBtn" class="diary-btn btn btn-outline-dark " disabled>Write your thoughts</button>
         </div>
 
         <div class="card d-flex justify-content-center ml-3 mr-3 mt-3 card-bg" style="width: 18rem;">
@@ -99,10 +100,8 @@
                 <button id="replace_4" onclick="replaceCard_4()" disabled="true" class="btn btn-outline-dark rep">Replace</button>
             </div>
         </div>
-
-
-
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <script>
         // --------------------- diary from appear ----------------------------
@@ -287,9 +286,7 @@
         }
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
