--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -23,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="#">Read your cards</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('user_panel')}}">diary</a>
+                            <a class="nav-link" href="{{url_for('user_panel')}}">Diary</a>
                         </li>
                         <li class="">
                             <button id="myBtn" class="diary-btn btn btn-outline-dark " disabled>Write your diary</button>
