--- a/templates/user_panel.html
+++ b/templates/user_panel.html
@@ -21,15 +21,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{{url_for('user_interface')}}">Home</a>
+                            <a class="nav-link active" aria-current="page" href="{{url_for('user_interface')}}">Read your cards</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{url_for('user_panel')}}">diary</a>
+                            <a class="nav-link" href="{{url_for('user_panel')}}">Diary</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-
                     </ul>
                 </div>
             </div>
